# ChangeLog for app-crypt/gnupg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.572 2015/02/09 20:49:42 k_f Exp $

  09 Feb 2015; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.0.25.ebuild,
  gnupg-2.0.26-r2.ebuild, gnupg-2.0.26-r3.ebuild, gnupg-2.1.1-r1.ebuild:
  Remove optional dependency on pinentry-qt in preparation of lastriting of this
  package

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26-r3.ebuild:
  Stable for alpha, wrt bug #534110

  17 Jan 2015; Markus Meier <maekke@gentoo.org> gnupg-2.0.26-r3.ebuild:
  arm stable, bug #534110

  16 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26-r3.ebuild:
  Stable for ia64, wrt bug #534110

  15 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26-r3.ebuild:
  Stable for ppc, wrt bug #534110

  14 Jan 2015; Andreas Schuerch <nativemad@gentoo.org> gnupg-2.0.26-r3.ebuild:
  x86 stable, see bug 534110

  14 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26-r3.ebuild:
  Stable for ppc64, wrt bug #534110

  13 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-2.0.26-r3.ebuild:
  Stable for amd64, wrt bug #534110

  13 Jan 2015; Jeroen Roovers <jer@gentoo.org> gnupg-2.0.26-r3.ebuild:
  Stable for HPPA (bug #534110).

  06 Jan 2015; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.1.1-r1.ebuild:
  Gnupg 2.1 require the internal dirmngr to be used and provide this by default
  so we make this a blocker

*gnupg-2.0.26-r3 (31 Dec 2014)
*gnupg-2.1.1-r1 (31 Dec 2014)

  31 Dec 2014; Alon Bar-Lev <alonbl@gentoo.org>
  +files/gnupg-2.0.26-misc-cve.patch, +files/gnupg-2.1.1-misc-cve.patch,
  +gnupg-2.0.26-r3.ebuild, +gnupg-2.1.1-r1.ebuild, -gnupg-2.1.1.ebuild:
  Fix misc CVEs, bug#534110

*gnupg-2.1.1 (17 Dec 2014)

  17 Dec 2014; Kristian Fiskerstrand <k_f@gentoo.org> +gnupg-2.1.1.ebuild,
  -gnupg-2.1.0-r1.ebuild:
  Version bump to GnuPG 2.1.1

*gnupg-2.1.0-r1 (24 Nov 2014)
