@@ -9,21 +9,23 @@ DIST gnupg-1.4.18.tar.bz2 3649557 SHA256 b7b5fdda78849955e0cdbc5a085f3a08f8b7fba
 DIST gnupg-2.0.25.tar.bz2 4301689 SHA256 b3abe97df096cf53d6a422ac922f3c48e688bc892b7ccf669b92f0b7fc6c5823 SHA512 8b80c86ec53ed3b82d15a8e316baf175691e06e1bcac28d66c61fd37d07e26196a7ee7855e6eb958c301cee764866cc3cf00e5ec0aef23abddf7427bb3d23fb1 WHIRLPOOL 786f3db3af0c96249e128ce3a30dee7e9fbec38d75ed29138f0dfdcbe4f4377c39d4152844087cec0147921eed73c1a01382b542c6a27e86e8bd9265f67e65e2
 DIST gnupg-2.0.26.tar.bz2 4303384 SHA256 7758e30dc382ae7a7167ed41b7f936aa50af5ea2d6fccdef663b5b750b65b8e0 SHA512 5dd23baaac764fd48abd235ed52a85a2c7fd68b98fcde45c0f294ddb3b5629e8b1bd894585fbed4e6a6cb2bc4a5552c098c3cf1a849fffa469424fd0a4fee726 WHIRLPOOL 8d9b30337957f6bfeddea29116d862ef0c0ddd06d59bc2799db236b91b2c6767aad6f37f2166fc431c5d9454eb41f49f3e261bc38d0e89361f0c467f4591cd5a
 DIST gnupg-2.1.1.tar.bz2 4801472 SHA256 70ecd01d2875db62624c911c2fd815742f50aef5492698eb3bfc09a08690ce49 SHA512 00aea535f18d66fa8053c25633f89acbdfc43c91db568d6b7de0db6b40331edafacd04bf2da0aeef3201642e63baf242504d58f05286cfab4014c062432d7885 WHIRLPOOL d49b164d52188f5a9b47a0892aa81918c21ee71bd85b2b1c27979edf1f303afa5bd94d77ff491d33d6f991057cce1faf347419a784cb64f25ebfe5c1fff78d16
+DIST gnupg-2.1.2.tar.bz2 4832996 SHA256 404f5a43d591dfe41f0ffb204b49a1533b67d77bc1fd68febd7e447575616792 SHA512 a12187d32a0d75e4e8ecabe87cd2a49de047dc0d5e601f73779303e0b2f3dad6c2874a665278319e50debd8acb724232be1f1122286ee82c82751063fef07ceb WHIRLPOOL 33f9e7306eb87b35a28489260b2c599164f8c8ac9d4e77d30145402df697a2705062dee02e6d1b904323df953c4b311e9d809216e8657145edd1cf8b1e63a37e
 EBUILD gnupg-1.4.18.ebuild 3763 SHA256 37cedb3946b555e83111f5096b3dd73f9506175976be10d648f8eb76b0b5fd3a SHA512 3dd165eb15a4946a9e2157549f0da6864e84c054a6369d7053730a899b50c5f05a703c1ce8e208b9de21b135bc8888f0f13835fce50f0e9eec467140e7e63355 WHIRLPOOL 9c64d59b7c444dde1fb601a6ab8d1085525153174b5995009ff7758866e56b88028056b42154fa0e28b3328978e15df515e4c65e65cb667fc17b75fb340e8e15
 EBUILD gnupg-2.0.25.ebuild 4716 SHA256 5b0139d96798f1da97dba5074de1ef97b0e778c7b8f3486c3410156d80b16589 SHA512 813f897f335b10b9ca0bbc747251f800531f4725905048d9ad1117a2d1bfccd6d913ae00403bef8aa29a9e3f43cff142ac310e841044bf7052fedc2885f0168e WHIRLPOOL fe7fbc891d1bd49a6bfd8c43e634ddd989482b36a991dc50df910635e66f91b37a5482ca70d71485c360f0d2042eefbba3be46f7129e4425f10aeedf74855796
 EBUILD gnupg-2.0.26-r2.ebuild 4854 SHA256 a71843091396ca9e4beeb8feb0cfa36bdf6347c4576ad89535cf4bbf3492a98d SHA512 fdc8d8525f0673bb59fc3e1f6aec19beadf602e15ed14d00da3ccf99926d3e8bf052753eb706c07817035c4ad6294d7c601bedb5afce9dd42154041367eff0cf WHIRLPOOL 41ef8787be1cda4da2321c4eb972619425f8eb6e9a0c9d002b56a9c49f4c3097a1e048bf1e5afd98ceff5d7772bb0aca572c0de4f6126ee862a5c99ea2493d21
 EBUILD gnupg-2.0.26-r3.ebuild 4889 SHA256 48c2e76ad50604d0771c4feb68b1cbc79889ff79b494076dcd840baffa3c0bbb SHA512 d6e57d4003247c6ed163ff40c8e924807d7b67a5dc80a67dade78bbb50ccac1df5cee0c8cc7fad3461ccf298a9c08b4118325027d5684ddf06649403d90524bd WHIRLPOOL 8f68c021757b0240ddc0d33532c4cddea74abc34851885d62e78f75e84f5e4d1d8bd23127e5a8541ee1c48ba781aeea5e1ab452e128c4941326c5de7328ea922
 EBUILD gnupg-2.0.26.ebuild 4815 SHA256 c1dad0a216f9af5605619bfd4ccc6d02caf49051d3532ecc039966284a807dc4 SHA512 7bd67cd37735a92b45ec167f30b038a830c7da1834d6e7500768bae2a4c89e9c9994012d78f4d52f4ad520cf7a7e1e1b42125dcecc5f408da0e4dbfa40afbf45 WHIRLPOOL 3d4d532f357d949cb02d4e61f86a9d724c10212a9329abf600e1adf5be6430c24992e076b4674b5c66e332928530a6fec166c5838a2eaa9fe4845a6f80eeb02c
 EBUILD gnupg-2.1.1-r1.ebuild 4651 SHA256 3415ee14db62dca13fde95a14685fb49f90c395edab34f665c17ac730a83f261 SHA512 6538b2ec536934b8b1edcdc393dbdbdc69284ea0d2ee9ce355d3bdd85b304fbb89addb81bcb1ab38130b69611f3474a60d92412c4e3fdd0e67c7274468c30cb8 WHIRLPOOL 7851f46481863c72facb109bac2a566d42650d7e4df2c6b828fab9d149c45cd37a7d34b4c6b1b548bcd98561da8bc321c624c241475d88c1bcb650b2ec0c5ff6
-MISC ChangeLog 83964 SHA256 060526129c5d7adf553e75e40838367df695cd0efbe50525edaf847dac3994b7 SHA512 4cdd3302d6be97d267a3b1ab7afe145fdfb264d7f59f297677edc58a4c18077c502cfb6ccae7453fd9695837282263cac5ad45a6bedd3dd836e6dd80ef0fda83 WHIRLPOOL a921999f74634ba88017db17aa03487bfbf84337c6d95c29f516839c063e1a6eeff31d4b9bde3e8d8325a6c5986d0ea6276d06f4e7857f3cae61983ed87004bc
+EBUILD gnupg-2.1.2.ebuild 4606 SHA256 2dd6dae035f526af8ea1fddc9d25bd4853d88f11a874b991ec9f1a0ba976c2d6 SHA512 bd549ec9a0f6d1fe106767619bd532090835a400290b909ad34e31b7c8fb70dd5f043c620ee14addcbb6c38546a8407127d8b0019eacf72904074ddaaf601f6e WHIRLPOOL d0bcc6f1561f44fd5a0964485e1abef9b28d3dd59e1f3b08cb725291260b524e85f336c4bfe345aeb132afef5c6c1719060eb5608ae052509eb7203706759ad7
+MISC ChangeLog 84111 SHA256 7ae80ca4fdd79af6b55b6228a91b0a3f4f0e4eaba63085bcc19e63025a1601ac SHA512 143edbb3e1a8a8b67bac02b1275f131781604197b87495a98c60bfdcf83405215e1313c645421115767447366efc465090b6cd5edc3cd9fa23e251e27be9d106 WHIRLPOOL cbbd6af930d32ce67d83271bd895219d1087fa635900a43614c423b60540091a9a17e2976060e8f871223eb9129bdae88518b350f894db7e85465d95f745d42c
 MISC metadata.xml 1032 SHA256 cbef1621eb1364c8d12ac18e71cf4aabfced9ecd3c990a3f3cdf066902dc97bb SHA512 5e2ef4380effe027a0b0b8a11a29ed1996b3b5256ee333909d4a7cfcb18ea1e9dead9b8303c7dffc1ad10014dea79e827b1d84caa92294f4d3dfc29ff23a6af5 WHIRLPOOL a24c7f71ed140f34dd59b10314869d0c5482063be20faefa1591595feb856c79bc57a6b344dd467875cf3389d8cd14e2d41f2312f51d3b77dcbe27af97b7f129
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJU2R1nAAoJEP7VAChXwav6ltgIAK2SZvxSPFf71QE/FZcRAx7Y
-atquHHXUKVKU9oLGkX11u7MtyEUaWVQ4Gt5FIytB8cDh0yUniuz8mSHMVt/tishY
-cYfPSsepK+8r/riE2aq0C0n6fV86ZqZt5uR5pW/7IMgMcuNIcVV+1KfVJlEQSAS9
-zzCito2A4IKe31mrLaIWk6PY0e4reI1Ts255NNSxTyRKOO+lQTiZqs4fdGGRb8z5
-LxhhTWv84V22Kssn1OLlYoDE0eJNLUEktG5IoG8OzVFKckP1vW+ud4lMQ1WGNXQk
-Q9FOmlTinJiGY9U64BFnOf0nanC7uUo1C3BNvt1alLIstG0+0UcEr3WtZhvYBms=
-=gvIF
+iQEcBAEBCAAGBQJU3cVmAAoJEP7VAChXwav61mAH/0pF/q9Bx18OBBtcm2ytpOrA
+7/jeSb7i0FVwsQeofYYcqy4vMuVLY7qWThZeZVne28iaCpZ24t1eSJxFWagJnsx/
+eVa0vgrWV19jNv2rhtb9MWz/tFAqMCyLXxnlmKiEaBApVWyWVYArtfSfzhURWQVi
+90sfK1SIDRftrk/i2fs7n8Pmbis82yauZgbLp6ymPRp3Q+vkYACYZ7QYLrFRORrv
+rQyXS2/oeU2xO1Bw35793GiqJ6Rrw+v6px+6zRnSKuWAlyhCalZdtT5YXiq5yhND
+G/uIDiNIdyxu8derB9lEhNqw7glFA2el7Zhn8QxPUPRz6qYNw7DzWe1WCHGQOL8=
+=MydW
 -----END PGP SIGNATURE-----
