@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare
+DEPEND=dev-libs/npth >=dev-libs/libassuan-2 >=dev-libs/libgcrypt-1.6.2 >=dev-libs/libgpg-error-1.17 >=dev-libs/libksba-1.0.7 >=net-misc/curl-7.10 gnutls? ( >=net-libs/gnutls-3.0 ) sys-libs/zlib ldap? ( net-nds/openldap ) bzip2? ( app-arch/bzip2 ) readline? ( sys-libs/readline ) smartcard? ( usb? ( virtual/libusb:0 ) ) app-crypt/pinentry !app-crypt/dirmngr static? ( >=dev-libs/libassuan-2[static-libs] >=dev-libs/libgcrypt-1.6.2[static-libs] >=dev-libs/libgpg-error-1.17[static-libs] >=dev-libs/libksba-1.0.7[static-libs] dev-libs/npth[static-libs] >=net-misc/curl-7.10[static-libs] sys-libs/zlib[static-libs] bzip2? ( app-arch/bzip2[static-libs] ) ) nls? ( sys-devel/gettext ) doc? ( sys-apps/texinfo )
+DESCRIPTION=The GNU Privacy Guard, a GPL pgp replacement
+EAPI=5
+HOMEPAGE=http://www.gnupg.org/
+IUSE=bzip2 doc +gnutls ldap nls readline static selinux smartcard tools usb
+LICENSE=GPL-3
+RDEPEND=!static? ( dev-libs/npth >=dev-libs/libassuan-2 >=dev-libs/libgcrypt-1.6.2 >=dev-libs/libgpg-error-1.17 >=dev-libs/libksba-1.0.7 >=net-misc/curl-7.10 gnutls? ( >=net-libs/gnutls-3.0 ) sys-libs/zlib ldap? ( net-nds/openldap ) bzip2? ( app-arch/bzip2 ) readline? ( sys-libs/readline ) smartcard? ( usb? ( virtual/libusb:0 ) ) ) app-crypt/pinentry !app-crypt/dirmngr selinux? ( sec-policy/selinux-gpg ) nls? ( virtual/libintl )
+REQUIRED_USE=smartcard? ( !static )
+SLOT=0
+SRC_URI=mirror://gnupg/gnupg/gnupg-2.1.2.tar.bz2
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=21521f12a03d5c087c73caca8e151e3f
