@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST s3cmd-1.0.1.tar.gz 57594 SHA256 d76826ea9c5a4789044424f1a50abe83523ba5d12a9185c7a6b7f4c86984bdce SHA512 daddb6c49a22cb2c9196d69116abddc639ab117b8a21413068e33e76f67dff5a21d6dca9a9d385113651fa996ace2359684709b2a3be33f4404ad79ed3d44814 WHIRLPOOL d151d9581359fd8dcc23550bc45fc972ab349153e7488d8d9e28c18857e5d550e834ae16274029797a4d2a096aa988e780ad82756f4f1b2a936002667ac96186
 DIST s3cmd-1.5.0-beta1.tar.gz 80380 SHA256 00c0ab4f6bc12c1f1a91104f870fbfbf3c33e628a41804001e30feab73c3a4fe SHA512 75968c657a238a0afbcc6b1bd6bb1af8445160620a7ebfff2c123d97cf42dedd55a37c925d72f0d8cba5d32d42303511378e3b5c919b4a24dea128169bec6a92 WHIRLPOOL 217aeaebb86f7dc6ada8e3f392e11a65ea051d06c741fa10b7cf2ff7851dd4a9bb18e3d1cee2761a1b5506eaa7393e9e66faef47f9c70967cc8ce00207d27ea5
 DIST s3cmd-1.5.0-rc1.tar.gz 86414 SHA256 90d5f5beb34250b0bb64a6773a61b036773058ec1ffdc33aa21a3e6a25d7a33f SHA512 8e2f35e4973c021722a48acdc6e39b9d41043220f35a84ea5acdd234b5e9d2dddac253cb2b50e5761457df3b678762dca99a9563eb5c5d0916ae8aefce9a2edf WHIRLPOOL 2fe81db961b20788d22ee9e515e859a42e1e9a83e94d06959f502431feb6c208cc8e8f244f449aad9322cd65042bd1e6c989c8c87f78cea86525225bd42ad1d8
 EBUILD s3cmd-1.0.1.ebuild 721 SHA256 7f9def16544ec17e9799b8741dc5cfec073e5db51c0084c70dee81c67f8bc014 SHA512 46136a2c1d2f90773f6ececda5c988f94b23d036ca23e76623d783331d6e9c11f58351994a481fa2dffdd6c87976f711a110e548320dc38667ea2527932b40b5 WHIRLPOOL 5d12e2126c3011c1f577e2baaedc29165eb9307149d27273f6d3b80e8c30b863c478541b6ccbca7ae181230b5a479d9ae845533b42db1837f23c0756a0b053b1
 EBUILD s3cmd-1.5.0_beta1.ebuild 758 SHA256 1c9e324d1ec69df5d6aa2930e7c4925e4ec7a6ae52acebdd5971d7b4c32a820d SHA512 08dbfb5c0355ffeea612e75da6a92492a145f3e7d5c5cf922b5e23d05cf8aa1a785aa257511954d856ae5f3f1101c1389f4144a43bb283de35a478edc4b9cb6b WHIRLPOOL 41ea54cb18f0148209d97695d87ec509070fd4481ee45f0beab3cbe499300b29bb7bdcb15c680b8b8d84d874dc19ce8c86ee1f1f44b9e2075bf3a1d836247f05
 EBUILD s3cmd-1.5.0_rc1.ebuild 781 SHA256 5744a9285c5651299e29fdd90b2a8d4b6c160186e54a4c9b8d5274efda27bb9a SHA512 861ac3ec3e66cd0b71da533f0d6cc39dd2f0fe29037ee2e7673ec940d4cc15db0881838c2d7142d4acdaf3f26bc6f98eeaef13117299ad462a9a18da77542076 WHIRLPOOL 3f66f1fe55067e1ad0450248f92ccd2216112e8106ee928a00c0d4d9360a315c89e22d43b3c483f43cc86227cdd9157baf681fa1c52e8f00703803cce449522c
-MISC ChangeLog 3329 SHA256 2610a5e9f8edd5170ce0fa1b911de19d89ce5545de3c6936736a09ed45b21a1c SHA512 86a68d196dd7c8efd62242fdb1ab129b1f58fe7499fd16e91c805bd4cc34b098bf8a668a4552de76e48d8cfbff89d4dd27284572d45acab18a4fe4e228f5cb58 WHIRLPOOL 620a6457a25df5783a91a63504779421ddc630832b737f806312b63c9ab7270b9bd7715b2e8b689a1c3fbeb7328852674f02bde21c3f1445c1d33f8ba80027f8
-MISC metadata.xml 515 SHA256 c4abbbaaace27b16de9a50c1c90d0b0bb8d3decb3800a69b03446d1aeecad227 SHA512 efcda70d0262e5603c6b3edf182e8b1d2920d06ee76b552d2918bbb98f429ced39c1122f9aeda7ba41bb4571494fd539b74f67859e2b33fd0662790037547648 WHIRLPOOL 6eb0dc88759b89965c38bac99ec44fab123ba88b57cea5f2cfe9c6bef0c1a69955bc9b03f1e0dfcb47cd4c60daa5411aa59e29f616b0790d04458695fd44fff2
+MISC ChangeLog 3408 SHA256 08e105b3a7cefb7ddf0a4067d216df56b49b03945b0c0c7c0c37d66fe995647d SHA512 5f0ec861094cdfb2389681a3dcaafd5debdb92b1598bbcbb95d60568d3de8176fd1609cb2e81bc36ae743330c1f300dad617de64270052a7e3aa536d7d1a06a0 WHIRLPOOL d95c047c891f65b58601148fc3a76cb67dfc8b0c9a041e3394b55be469df44aebb8eeb298be5572708edc7b632f62dcb450e89c8dc1378ca11467ae17153ca36
+MISC metadata.xml 515 SHA256 7b58077daabe00c6230da6759ffa7e6605402ed6d4b6cca6caefbda86c16ce2a SHA512 92f91cae1f8ac2f97d86bdd21e843639b2ba1702ef95c05ffe904f8ba70c94cb0ad91d560a84357be00cde716f3d7cb635b7413f7dd3b1b1a8bb5ffd1239e40f WHIRLPOOL 2883449a979cbe7f6653508bb0693cddcc8df6f028ad32a6c8bb0afad9b8648753dae8f23d2c2a986c5522a48a2c4c1a7e1b2baf072e34aeb0325081b4237b9c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTdxbwACgkQVWmRsqeSphPUtwCeMS/eAgIKVbj8cyIrdDE9GVff
+mbkAn29gclhEVd+x5I6KeJpxJR4IFzMT
+=URuR
+-----END PGP SIGNATURE-----
