@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/s3cmd
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/s3cmd/ChangeLog,v 1.25 2015/01/31 16:57:08 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/s3cmd/ChangeLog,v 1.26 2015/02/13 09:36:59 jer Exp $
+
+  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Fix e-mail address.
 
   31 Jan 2015; Jeremy Olexa <darkside@gentoo.org> s3cmd-1.5.0_rc1.ebuild:
   Add Gentoo Prefix mods and keyword, bug 537050
