@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.572 2015/02/09 20:49:42 k_f Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.573 2015/02/13 09:35:33 k_f Exp $
+
+*gnupg-2.1.2 (13 Feb 2015)
+
+  13 Feb 2015; Kristian Fiskerstrand <k_f@gentoo.org> +gnupg-2.1.2.ebuild:
+  Version bump, new upstream release 2.1.2
 
   09 Feb 2015; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.0.25.ebuild,
   gnupg-2.0.26-r2.ebuild, gnupg-2.0.26-r3.ebuild, gnupg-2.1.1-r1.ebuild:
